--- a/NumpyTask1/Numpy _Task1.ipynb
+++ b/NumpyTask1/Numpy _Task1.ipynb
@@ -102,11 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.    0.75  2.    1.    0.5  ]\n",
+      " [1.    0.125 1.    1.    0.125]\n",
+      " [2.75  1.5   1.    0.    1.   ]\n",
+      " [4.    0.5   2.    2.    0.5  ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#type your code here\n"
+    "#type your code here\n",
+    "print(recipes)"
    ]
   },
   {
