--- a/NumpyTask2/Numpy_Task2.ipynb
+++ b/NumpyTask2/Numpy_Task2.ipynb
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "import numpy as np\n"
    ]
   },
   {
@@ -51,12 +51,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 70., 120.,  70.,  50., 110., 110., 110., 130.,  90.,  90., 120.,\n",
+       "       110., 120., 110., 110., 110., 100., 110., 110., 110., 100., 110.,\n",
+       "       100., 100., 110., 110., 100., 120., 120., 110., 100., 110., 100.,\n",
+       "       110., 120., 120., 110., 110., 110., 140., 110., 100., 110., 100.,\n",
+       "       150., 150., 160., 100., 120., 140.,  90., 130., 120., 100.,  50.,\n",
+       "        50., 100., 100., 120., 100.,  90., 110., 110.,  80.,  90.,  90.,\n",
+       "       110., 110.,  90., 110., 140., 100., 110., 110., 100., 100., 110.])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "\n",
+    "calorie_stats = np.genfromtxt(\"cereal.csv\", delimiter=\",\")\n",
+    "calorie_stats"
    ]
   },
   {
@@ -191,9 +210,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.1 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38164bitd238765b229d430fb67a6cc95d24459f"
   },
   "language_info": {
    "codemirror_mode": {
@@ -205,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
