--- a/NumpyTask2/Numpy_Task2.ipynb
+++ b/NumpyTask2/Numpy_Task2.ipynb
@@ -91,10 +91,19 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "106.88311688311688\n"
+     ]
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "average_calories = np.average(calorie_stats)\n",
+    "print(average_calories)\n"
    ]
   },
   {
@@ -110,10 +119,28 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 50.,  50.,  50.,  70.,  70.,  80.,  90.,  90.,  90.,  90.,  90.,\n",
+       "        90.,  90., 100., 100., 100., 100., 100., 100., 100., 100., 100.,\n",
+       "       100., 100., 100., 100., 100., 100., 100., 100., 110., 110., 110.,\n",
+       "       110., 110., 110., 110., 110., 110., 110., 110., 110., 110., 110.,\n",
+       "       110., 110., 110., 110., 110., 110., 110., 110., 110., 110., 110.,\n",
+       "       110., 110., 110., 110., 120., 120., 120., 120., 120., 120., 120.,\n",
+       "       120., 120., 120., 130., 130., 140., 140., 140., 150., 150., 160.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "calorie_stats_sorted = np.sort(calorie_stats)\n",
+    "calorie_stats_sorted\n"
    ]
   },
   {
@@ -127,12 +154,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "median_calories = np.median(calorie_stats)\n",
+    "\n",
+    "median_calories\n"
    ]
   },
   {
