--- a/NumpyTask2/Numpy_Task2.ipynb
+++ b/NumpyTask2/Numpy_Task2.ipynb
@@ -186,12 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.008\n"
+     ]
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "nth_percentile = np.percentile(calorie_stats_sorted,3.29)\n",
+    "print(nth_percentile)"
    ]
   },
   {
@@ -205,12 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96.1038961038961\n"
+     ]
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "\n",
+    "more_calories = np.mean(calorie_stats > 60)*100\n",
+    "print(more_calories)"
    ]
   },
   {
@@ -224,12 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.35718533390827\n"
+     ]
+    }
+   ],
    "source": [
     "# your code goes here\n",
-    "\n"
+    "calorie_std = np.std(calorie_stats)\n",
+    "print(calorie_std)\n"
    ]
   },
   {
